# GeminiStudio

./: .gitignore  LICENSE  Procfile.dev  README.md  check-firebase-secrets.sh  database.rules.json  firestore.rules  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
asset-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
asset-service/src/asset_service/: __init__.py  __main__.py  api_key_provider.py  config.py  pubsub.py
asset-service/src/asset_service/api/: __init__.py  app.py
asset-service/src/asset_service/cloudconvert/: __init__.py  client.py  store.py
asset-service/src/asset_service/gemini/: __init__.py  files_api.py
asset-service/src/asset_service/metadata/: __init__.py  ffprobe.py
asset-service/src/asset_service/pipeline/: __init__.py  registry.py  store.py  types.py
asset-service/src/asset_service/search/: __init__.py  algolia.py
asset-service/src/asset_service/storage/: __init__.py  firestore.py  gcs.py
asset-service/src/asset_service/tasks/: __init__.py  queue.py  worker.py
asset-service/src/asset_service/transcode/: __init__.py  service.py  store.py
asset-service/src/asset_service/transcription/: __init__.py  speech.py  store.py
langgraph_server/: .gitignore  Dockerfile  README.md  langgraph.json  pyproject.toml  requirements.txt
langgraph_server/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
langgraph_server/scripts/: test_render_payload.py
langgraph_server/src/langgraph_server/: agent.py  agent_status.py  api.py  api_key_provider.py  asset_store.py  attachment_queue.py  checkpoint.py  config.py  credits.py  firebase.py  gemini_files.py  hmac_auth.py  main.py  phone.py  pipeline_events.py  render_events.py  schemas.py  status_generator.py  title_generator.py  tool_manifest.py  veo_events.py
langgraph_server/src/langgraph_server/chat/: __init__.py  base.py  dispatcher.py  telegram.py  types.py
langgraph_server/src/langgraph_server/prompts/: README.md  __init__.py  base.txt  captions.txt  chapters_and_titles.txt  examples.txt  motion_canvas.txt  music_mood.txt  narrative.txt  render_and_defaults.txt  timeline_layers.txt  video_effects.txt  video_iteration.txt
langgraph_server/src/langgraph_server/tools/: __init__.py  add_clip_tool.py  add_transition_tool.py  apply_chroma_key_tool.py  apply_video_effect_tool.py  create_component_tool.py  delete_clip_tool.py  digest_asset_tool.py  edit_component_tool.py  generate_image_tool.py  generate_music_tool.py  generate_tts_tool.py  generate_veo_video_tool.py  get_asset_metadata_tool.py  get_project_summary_tool.py  get_timeline_state_tool.py  inspect_asset_tool.py  list_assets_tool.py  list_project_assets_tool.py  plan_narrative_edit_tool.py  preview_timeline_tool.py  queue_attachment_tool.py  remove_background_tool.py  remove_transition_tool.py  render_video_tool.py  reorder_layers_tool.py  search_assets_tool.py  send_attachment_tool.py  set_asset_notes_tool.py  set_caption_settings_tool.py  set_scene_config_tool.py  subscribe_pipeline_tool.py  subscribe_transcode_tool.py  update_clip_tool.py  watch_asset_tool.py  (+2 more)
langgraph_server/tests/: __init__.py  conftest.py  helpers.py  test_add_clip_tool.py  test_delete_clip_tool.py  test_docs_tool.py  test_gemini_integration.py  test_get_asset_metadata_tool.py  test_get_project_summary_tool.py  test_list_project_assets_tool.py  test_subscribe_pipeline_tool.py  test_time_tool.py  test_weather_tool.py
services/langgraph_server/: Dockerfile  README.md  pyproject.toml
video-effects-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
video-effects-service/src/video_effects_service/: __init__.py  __main__.py  asset_client.py  config.py  hmac_auth.py  service.py
(+544 files in other folders)
